--- a/Makefile.Debug
+++ b/Makefile.Debug
@@ -90,7 +90,7 @@ $(OBJECTS) $(LIBS)
 <<
 
 qmake: FORCE
-	@$(QMAKE) -spec win32-msvc2013 -o Makefile.Debug replaceTool.pro
+	@$(QMAKE) -spec win32-msvc2013 CONFIG+=debug -o Makefile.Debug replaceTool.pro
 
 qmake_all: FORCE
 
@@ -185,7 +185,10 @@ debug\main.obj: main.cpp C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QCoreA
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qobject_impl.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qeventloop.h \
 		function.h \
-		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QString
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QString \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QVector \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qvector.h \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qpoint.h
 
 debug\function.obj: function.cpp function.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QString \
@@ -224,10 +227,16 @@ debug\function.obj: function.cpp function.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qnamespace.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qarraydata.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qstringbuilder.h \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QVector \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qvector.h \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qalgorithms.h \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qiterator.h \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qlist.h \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qbytearraylist.h \
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qpoint.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QJsonObject \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qjsonobject.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qjsonvalue.h \
-		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qiterator.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qpair.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QJsonArray \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qjsonarray.h \
@@ -242,9 +251,6 @@ debug\function.obj: function.cpp function.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qobject.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qobjectdefs.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qobjectdefs_impl.h \
-		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qlist.h \
-		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qalgorithms.h \
-		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qbytearraylist.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qcoreevent.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qscopedpointer.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qmetatype.h \
@@ -264,13 +270,10 @@ debug\function.obj: function.cpp function.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qregexp.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qstringmatcher.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qshareddata.h \
-		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qvector.h \
-		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qpoint.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qset.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qcontiguouscache.h \
 		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QTextCodec \
-		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qtextcodec.h \
-		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\QVector
+		C:\Qt\Qt5.4.0\5.4\msvc2013_opengl\include\QtCore\qtextcodec.h
 
 ####### Install
 
